varnish/tests/fail/error_event.stderr
error: More than one event handler found. Only one event handler is allowed
 --> tests/fail/error_event.rs:2:1
  |
2 | mod event_dup {
  | ^^^
